--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py33,py34,py26,py27,pep8
 setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands = python setup.py testr --slowest --testr-args={posargs}
 
 [testenv:pep8]
 commands = flake8
